<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/fondodos"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#80000000">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_bvdquizz"
            android:fontFamily="@font/saira_medium"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="80sp"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text=""
            android:fontFamily="@font/saira_medium"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="80sp"
            />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            style="@style/CustomButtonStyle"
            />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            style="@style/CustomButtonStyle"
            />


    </LinearLayout>

</LinearLayout>