<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity3"
    android:background="@drawable/fondotres">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#80000000">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/ic_pokeball"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/saira_medium"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/txt_ingresar"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtinput_personaje"
                android:layout_width="290dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:hint="Ingrese Nombre"
                android:textColor="@color/white"

                />

            <Button
                android:id="@+id/btn_Consultar"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/btn_consultar"
                style="@style/CustomButtonStyle"/>

            <Button
                android:id="@+id/btn_Salir"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                style="@style/CustomButtonStyle"
                android:layout_marginTop="70dp"
                android:text="@string/btn_regresar"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
</LinearLayout>